--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "drizzle-orm": "^0.44.5",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.542.0",
     "next": "^15.5.2",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
