--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "drizzle-orm": "^0.44.5",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lightningcss": "^1.30.1",
     "lucide-react": "^0.542.0",
     "next": "^15.5.2",
     "pg": "^8.13.1",
