--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^24.3.1",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
+    "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.21",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
