--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.21",
     "bcryptjs": "^3.0.2",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.44.5",
     "jose": "^6.1.0",
@@ -36,6 +37,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
     "ts-fsrs": "^5.2.3",
     "typescript": "^5.9.2"
