--- a/.env.local.example
+++ b/.env.local.example
@@ -6,5 +6,11 @@ JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 ANTHROPIC_API_KEY=your-anthropic-api-key
 OPENAI_API_KEY=your-openai-api-key
 
+# Embedding provider configuration (optional)
+# Set EMBEDDING_PROVIDER to "openai", "anthropic", or "local"
+EMBEDDING_PROVIDER=openai
+OPENAI_EMBEDDING_MODEL=text-embedding-3-small
+ANTHROPIC_EMBEDDING_MODEL=claude-3-5-haiku-embed
+
 # Database
 DATABASE_URL=file:./oblivian.db
