--- a/.env.local.example
+++ b/.env.local.example
@@ -25,5 +25,11 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 ANTHROPIC_API_KEY=your-anthropic-api-key
 OPENAI_API_KEY=your-openai-api-key
 
+# Embedding provider configuration (optional)
+# Set EMBEDDING_PROVIDER to "openai", "anthropic", or "local"
+EMBEDDING_PROVIDER=openai
+OPENAI_EMBEDDING_MODEL=text-embedding-3-small
+ANTHROPIC_EMBEDDING_MODEL=claude-3-5-haiku-embed
+
 # Database
 DATABASE_URL=file:./oblivian.db
