docs: Add Google OAuth environment variables to example file
Update .env.local.example to include all required Google SSO configuration:
- Google OAuth credentials and settings
- Authentication session configuration
- App URL configuration
- Clear documentation and generation commands

This helps users properly configure the Google SSO authentication feature.

--- a/.env.local.example
+++ b/.env.local.example
@@ -2,6 +2,25 @@
 # Generate a secure random string: openssl rand -base64 32
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 
+# Google OAuth Configuration
+# Enable/disable Google SSO authentication
+GOOGLE_AUTH_ENABLED=true
+# Get these from Google Cloud Console OAuth 2.0 credentials
+GOOGLE_CLIENT_ID=your-google-client-id-from-cloud-console
+GOOGLE_CLIENT_SECRET=your-google-client-secret-from-cloud-console
+# Redirect URI (auto-generated if not set)
+GOOGLE_REDIRECT_URI=http://localhost:3000/api/auth/google/callback
+
+# Authentication Session Configuration
+# Session secret (minimum 32 characters) - generate with: openssl rand -base64 48
+AUTH_SESSION_SECRET=your-super-secure-session-secret-at-least-32-characters-long
+# Session duration in seconds (default: 86400 = 24 hours)
+AUTH_SESSION_DURATION=86400
+
+# App Configuration
+# Base URL for the application (used for redirect URI generation)
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+
 # AI Provider API Keys (optional - for card generation)
 ANTHROPIC_API_KEY=your-anthropic-api-key
 OPENAI_API_KEY=your-openai-api-key
