refactor: remove Anthropic embedding support and simplify to OpenAI-only
- Remove fake Anthropic embedding models (they don't exist)
- Remove 'local' fallback provider (poor quality hash-based embeddings)
- Simplify EmbeddingProvider type to only support 'openai'
- Update default model to text-embedding-3-large for better quality
- Remove unnecessary provider selection logic
- Clean up environment configuration
- Update documentation to reflect OpenAI-only embedding support

This ensures users get real, high-quality semantic embeddings for deck similarity.

--- a/.env.local.example
+++ b/.env.local.example
@@ -26,10 +26,9 @@ ANTHROPIC_API_KEY=your-anthropic-api-key
 OPENAI_API_KEY=your-openai-api-key
 
 # Embedding provider configuration (optional)
-# Set EMBEDDING_PROVIDER to "openai", "anthropic", or "local"
+# Only OpenAI embeddings are supported
 EMBEDDING_PROVIDER=openai
-OPENAI_EMBEDDING_MODEL=text-embedding-3-small
-ANTHROPIC_EMBEDDING_MODEL=claude-3-5-haiku-embed
+OPENAI_EMBEDDING_MODEL=text-embedding-3-large
 
 # Database
 DATABASE_URL=file:./oblivian.db
