--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "db:push": "drizzle-kit push",
     "postinstall": "node -e \"try{require('@tailwindcss/oxide')}catch(e){console.log('Installing native deps...')}\"",
     "mcp:test": "cd mcp-server && node test-mcp.cjs"
   },
