--- a/.env.local.example
+++ b/.env.local.example
@@ -22,13 +22,14 @@ AUTH_SESSION_DURATION=86400
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # AI Provider API Keys (optional - for card generation)
-ANTHROPIC_API_KEY=your-anthropic-api-key
-OPENAI_API_KEY=your-openai-api-key
+GEMINI_API_KEY=your-gemini-api-key
+# Optional: override default Gemini model (defaults to gemini-1.5-flash)
+GEMINI_MODEL=gemini-1.5-flash
 
 # Embedding provider configuration (optional)
-# Only OpenAI embeddings are supported
-EMBEDDING_PROVIDER=openai
-OPENAI_EMBEDDING_MODEL=text-embedding-3-small
+# Only Gemini embeddings are supported
+EMBEDDING_PROVIDER=gemini
+GEMINI_EMBEDDING_MODEL=text-embedding-004
 
 # Database
 DATABASE_URL=file:./oblivian.db
