--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
     "ts-fsrs": "^5.2.3",
-    "typescript": "^5.9.2",
-    "openai": "^4.67.1"
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
